--- a/src/main/resources/swagger/index.html
+++ b/src/main/resources/swagger/index.html
@@ -37,7 +37,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "../../api-docs/swagger.json";
+        url = "../../api/0.1/api-docs/swagger.json";
       }
 
       hljs.configure({
